--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
-theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
 title: OpenBSD Notes
 description: My collection of OpenBSD notes and documentation
 baseurl: "/openbsdnotes"
+url: "https://ignacio2600.github.io"
+
+plugins:
+  - jekyll-remote-theme
