--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-remote_theme: pages-themes/hacker@v0.2.0
 title: OpenBSD Notes
 description: My collection of OpenBSD notes and documentation
-baseurl: ""
-url: "https://ignacio2600.github.io"
+remote_theme: pages-themes/hacker@v0.2.0
 
-plugins:
-  - jekyll-remote-theme
+url: "https://ignacio2600.github.io"
+baseurl: "/openbsdnotes"   # important for project pages
